<resources>
    <string name="app_name">Spotifake</string>
    <string name="api_url">http://10.0.2.2:8080/</string>
    <string name="action_settings">Settings</string>
    
    <string name="login">Login</string>
    <string name="password">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="no_account">¿No tienes cuenta? Regístrate</string>
    
    <!-- Registro -->
    <string name="title_register">Crear cuenta</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Usuario</string>
    <string name="btn_register">Registrarse</string>
    <string name="already_have_account">¿Ya tienes cuenta? Inicia sesión</string>
    
    <!-- Home -->
    <string name="welcome_back">Bienvenido de nuevo</string>
    <string name="from_artist">De %1$s</string>
    
    <!-- Player -->
    <string name="like">Me gusta</string>
    <string name="no_track">Sin canción</string>
    
    <!-- Menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_library">Biblioteca</string>
    <string name="menu_logout">Salir</string>
    
    <!-- Library -->
    <string name="fav_songs">Canciones favoritas</string>
    <string name="no_favs">Aún no tienes favoritos</string>
    
    <!-- Search -->
    <string name="title_search">Buscar</string>
    <string name="hint_search">¿Qué quieres escuchar?</string>
    <string name="search_idle">Explora millones de canciones</string>
    <string name="search_no_results">No se encontraron resultados</string>
    
    <!-- Toasts / Errors -->
    <string name="error_fields">Por favor, completa todos los campos</string>
    <string name="error_connection">Error de conexión</string>
    <string name="error_invalid_session">Respuesta de sesión inválida</string>
    <string name="register_success">Registro exitoso. Ahora puedes iniciar sesión.</string>
    
    <!-- Misc / Legacy -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
</resources>
