<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home"
    />

    <item
            android:id="@+id/menu_buscar"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_search"
    />

    <item
            android:id="@+id/menu_biblioteca"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_library"
    />

    <item

            android:id="@+id/menu_salir"
            android:icon="@drawable/exit_icon"
            android:title="@string/menu_logout"

    />

    <group android:id="@+id/menu_settings" android:checkableBehavior="none">
        <item
            android:id="@+id/menu_language"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="ES/EN" />
    </group>

</menu>
